@@ -1,7 +1,7 @@
 plugins {
     application
     id("org.graalvm.buildtools.native") version "0.10.6"
-    id("com.github.johnrengelman.shadow") version "8.1.1"
+    id("com.gradleup.shadow") version "8.3.0"
 }
 
 repositories {
@@ -38,6 +38,7 @@ java {
 
 application {
     mainClass = "io.github.syntaxpresso.core.Core"
+    applicationDefaultJvmArgs = listOf("--enable-native-access=ALL-UNNAMED")
 }
 
 graalvmNative {
